k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goradio-panel
  namespace: goradio-panel
spec:
  selector:
    app: goradio-panel
  ports:
    - name: http
      port: 80
      targetPort: http
